Добавлен main для index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,145 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+  <header class="header-main">
+    <div class="site-logo">
+      <img src="logo.jpg" alt="Device">
+    </div>
+    <div class="site-search">
+      <input class="searchbox" title="search">
+    </div>
+    <nav class="nav-header">
+      <ul class="nav-header-user">
+        <li>
+          <a href="login.html">Войти</a>
+        </li>
+      </ul>
+      <ul class="nav-header-items">
+        <li>
+          <a href="compare.html">Сравнить</a>
+        </li>
+        <li>
+          <a href="cart.html">Корзина</a>
+        </li>
+      </ul>
+      <ul class="nav-header-site">
+        <li>
+          <a href="catalogue.html">Каталог</a>
+        </li>
+        <li>
+          <a href="delivery.html">Доставка</a>
+        </li>
+        <li>
+          <a href="garanty.html">Гарантия</a>
+        </li>
+        <li>
+          <a href="contacts.html">Контакты</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1 class="hidden-header">Интернет-магазин Device</h1>
+    <section class="advert-box">
+      <ul class="radio-list">
+        <li><input  type="radio" title="advert-select" checked></li>
+        <li><input  type="radio" title="advert-select"></li>
+        <li><input  type="radio" title="advert-select"></li>
+      </ul>
+      <ul class="advert-list">
+        <li>
+          <div class="advert visible-true">
+            <h2 class="advert-header active-advert">Делай селфи, как Бен Стиллер!</h2>
+            <img src="selfie-stick-8m.jpg">
+            <p class="short-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+            <a href="selfie-stick.html">Подробнее</a>
+            <ul class="properties">
+              <li class="length">
+                <span>8,5 м</span>
+                <p>Длина палки</p>
+              </li>
+              <li class="weight">
+                <span>5 кг</span>
+                <p>Вес палки</p>
+              </li>
+              <li class="material">
+                <span>Карбон</span>
+                <p>Материал</p>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="advert visible-false">
+            <h2 class="advert-header">Любительская селфи-палка</h2>
+            <img src="selfie-stick-amateur.jpg">
+            <p class="short-description">Обычная палка. Ничего особенного</p>
+            <a href="selfie-stick.html">Подробнее</a>
+            <ul class="properties">
+              <li class="length">
+                <span>2 м</span>
+                <p>Длина палки</p>
+              </li>
+              <li class="weight">
+                <span>4 кг</span>
+                <p>Вес палки</p>
+              </li>
+              <li class="material">
+                <span>Алюминий</span>
+                <p>Материал</p>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="advert visible-false">
+            <h2 class="advert-header">Профессиональная селфи-палка</h2>
+            <img src="selfie-stick-professional.jpg">
+            <p class="short-description">Стань проффессионалом селфи!</p>
+            <a href="selfie-stick.html">Подробнее</a>
+            <ul class="properties">
+              <li class="length">
+                <span>5 м</span>
+                <p>Длина палки</p>
+              </li>
+              <li class="weight">
+                <span>3 кг</span>
+                <p>Вес палки</p>
+              </li>
+              <li class="material">
+                <span>Титан</span>
+                <p>Материал</p>
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <nav class="nav-main">
+      <ul>
+        <li>
+          <a href="virtual-reality.html">Виртуальная реальность</a>
+        </li>
+        <li>
+          <a href="monopodes.html">Моноподы для селфи</a>
+        </li>
+        <li>
+          <a href="action-cameras.html">Экшн-камеры</a>
+        </li>
+        <li>
+          <a href="fitnes-tracker.html">Фитнес-браслеты</a>
+        </li>
+        <li>
+          <a href="smart-watch.html">Умные часы</a>
+        </li>
+        <li>
+          <a href="quadrocopters.html">Квадрокоптеры</a>
+        </li>
+      </ul>
+    </nav>
+  </main>
+  <footer class="footer-main">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
+  </footer>
   </body>
 </html>
