--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
   <header class="header-main">
-    <div class="site-logo">
-      <img src="logo.jpg" alt="Device">
+    <div class="header-logo">
+      <a href="index.html"><img src="header-logo.jpg" alt="Device"></a>
     </div>
     <div class="site-search">
       <input class="searchbox" title="search">
@@ -15,20 +15,52 @@
     <nav class="nav-header">
       <ul class="nav-header-user">
         <li>
-          <a href="login.html">Войти</a>
+          <a class="nav-header-item" href="login.html">Войти</a>
         </li>
       </ul>
-      <ul class="nav-header-items">
+      <ul class="nav-header-goods">
         <li>
-          <a href="compare.html">Сравнить</a>
+          <a class="nav-header-item" href="compare.html">Сравнить</a>
         </li>
         <li>
-          <a href="cart.html">Корзина</a>
+          <a class="nav-header-item" href="cart.html">Корзина</a>
         </li>
       </ul>
       <ul class="nav-header-site">
         <li>
-          <a href="catalogue.html">Каталог</a>
+          <a href="catalogue.html">Каталог товаров</a>
+          <ul class="nav-header-site-catalog">
+            <li>
+              <ul class="nav-header-site-catalog-item">
+                <li>
+                  <a class="catalog-link" href="virtual_reality.html">Виртуальная реальность</a>
+                </li>
+                <li>
+                  <a class="catalog-link" href="selfie-monopodes.html">Моноподы для селфи</a>
+                </li>
+                <li>
+                  <a class="catalog-link" href="action-cameras.html">Экшн-камеры</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <ul class="nav-header-site-catalog-item">
+                <li>
+                  <a class="catalog-link" href="fitnes-bracelet.html">Фитнес-браслеты</a>
+                </li>
+                <li>
+                  <a class="catalog-link" href="smart-watch.html">Умные часы</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <ul class="nav-header-site-catalog-item">
+                <li>
+                  <a class="catalog-link" href="quadrocopters.html">Квадрокоптеры</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </li>
         <li>
           <a href="delivery.html">Доставка</a>
@@ -43,8 +75,9 @@
     </nav>
   </header>
   <main>
-    <h1 class="hidden-header">Интернет-магазин Device</h1>
+    <h1 class="visually-hidden">Интернет-магазин Device</h1>
     <section class="advert-box">
+      <h2 class="visually-hidden">Рекламные слайдеры</h2>
       <ul class="radio-list">
         <li><input  type="radio" title="advert-select" checked></li>
         <li><input  type="radio" title="advert-select"></li>
@@ -52,98 +85,198 @@
       </ul>
       <ul class="advert-list">
         <li>
-          <div class="advert visible-true">
-            <h2 class="advert-header active-advert">Делай селфи, как Бен Стиллер!</h2>
-            <img src="selfie-stick-8m.jpg">
+          <div class="advert">
+            <h3 class="advert-header">Делай селфи, как Бен Стиллер!</h3>
+            <img src="selfie-stick-8m.jpg" alt="Селфи палка 8 метров">
             <p class="short-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-            <a href="selfie-stick.html">Подробнее</a>
+            <a href="selfie-stick.html" class="link" >Подробнее</a>
             <ul class="properties">
-              <li class="length">
-                <span>8,5 м</span>
-                <p>Длина палки</p>
+              <li class="option">
+                <span class="option-main">8,5 м</span>
+                <span class="option-description">Длина палки</span>
               </li>
-              <li class="weight">
-                <span>5 кг</span>
-                <p>Вес палки</p>
+              <li class="option">
+                <span class="option-main">5 кг</span>
+                <span class="option-description">Вес палки</span>
               </li>
-              <li class="material">
-                <span>Карбон</span>
-                <p>Материал</p>
+              <li class="option">
+                <span class="option-main">Карбон</span>
+                <span class="option-description">Материал</span>
               </li>
             </ul>
           </div>
         </li>
         <li>
-          <div class="advert visible-false">
-            <h2 class="advert-header">Любительская селфи-палка</h2>
-            <img src="selfie-stick-amateur.jpg">
-            <p class="short-description">Обычная палка. Ничего особенного</p>
-            <a href="selfie-stick.html">Подробнее</a>
+          <div class="advert visually-hidden">
+            <h3 class="advert-header">Худеем правильно!</h3>
+            <img src="fitness-bracelet.jpg" alt="Фитнес-браслет">
+            <p class="short-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a href="fitness-bracelet.html" class="link">Подробнее</a>
             <ul class="properties">
-              <li class="length">
-                <span>2 м</span>
-                <p>Длина палки</p>
-              </li>
-              <li class="weight">
-                <span>4 кг</span>
-                <p>Вес палки</p>
-              </li>
-              <li class="material">
-                <span>Алюминий</span>
-                <p>Материал</p>
+              <li class="option">
+                <span class="option-main">48 часов</span>
+                <span class="option-description">Без подзарядки</span>
               </li>
             </ul>
           </div>
         </li>
         <li>
-          <div class="advert visible-false">
-            <h2 class="advert-header">Профессиональная селфи-палка</h2>
-            <img src="selfie-stick-professional.jpg">
-            <p class="short-description">Стань проффессионалом селфи!</p>
-            <a href="selfie-stick.html">Подробнее</a>
+          <div class="advert visually-hidden">
+            <h3 class="advert-header">Порхает как бабочка, жалит как пчела!</h3>
+            <img src="selfie-stick-professional.jpg" alt="Квадрокоптер">
+            <p class="short-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a href="selfie-stick.html" class="link">Подробнее</a>
             <ul class="properties">
-              <li class="length">
-                <span>5 м</span>
-                <p>Длина палки</p>
+              <li class="option">
+                <span class="option-main">800 м</span>
+                <span class="option-description">Дальность полета</span>
               </li>
-              <li class="weight">
-                <span>3 кг</span>
-                <p>Вес палки</p>
-              </li>
-              <li class="material">
-                <span>Титан</span>
-                <p>Материал</p>
+              <li class="option">
+                <span class="option-main">50 м</span>
+                <span class="option-description">Радиус поражения</span>
               </li>
             </ul>
           </div>
         </li>
       </ul>
     </section>
-    <nav class="nav-main">
-      <ul>
-        <li>
-          <a href="virtual-reality.html">Виртуальная реальность</a>
+    <section class="popular">
+      <h2 class="visually-hidden">Популярные товары</h2>
+      <nav class="nav-popular">
+        <ul>
+          <li>
+            <a href="virtual-reality.html">Виртуальная реальность</a>
+          </li>
+          <li>
+            <a href="monopodes.html">Моноподы для селфи</a>
+          </li>
+          <li>
+            <a href="action-cameras.html">Экшн-камеры</a>
+          </li>
+          <li>
+            <a href="fitnes-tracker.html">Фитнес-браслеты</a>
+          </li>
+          <li>
+            <a href="smart-watch.html">Умные часы</a>
+          </li>
+          <li>
+            <a href="quadrocopters.html">Квадрокоптеры</a>
+          </li>
+        </ul>
+      </nav>
+    </section>
+    <section class="services">
+      <h2 class="visually-hidden">Сервисы</h2>
+      <ul class="nav-services-list">
+        <li class="nav-services-item">
+          <button class="link">Доставка</button>
         </li>
-        <li>
-          <a href="monopodes.html">Моноподы для селфи</a>
+        <li class="nav-services-item">
+          <button class="link">Гарантия</button>
         </li>
-        <li>
-          <a href="action-cameras.html">Экшн-камеры</a>
-        </li>
-        <li>
-          <a href="fitnes-tracker.html">Фитнес-браслеты</a>
-        </li>
-        <li>
-          <a href="smart-watch.html">Умные часы</a>
-        </li>
-        <li>
-          <a href="quadrocopters.html">Квадрокоптеры</a>
+        <li class="nav-services-item">
+          <button class="link">Кредит</button>
         </li>
       </ul>
-    </nav>
+      <div class="nav-services-description">
+        <article>
+          <h3 class="nav-services-header">Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </article>
+        <article class="visually-hidden">
+          <h3 class="nav-services-header">Гарантия</h3>
+          <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+        </article>
+        <article class="visually-hidden">
+          <h3 class="nav-services-header">Кредит</h3>
+          <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+        </article>
+      </div>
+    </section>
+    <section class="logotypes">
+      <ul>
+        <li>
+          <a href="dgi.html"><img src="dgi-logo.jpg" alt="GDI"></a>
+        </li>
+        <li>
+          <a href="spgadgets.html"><img src="spgadgets-logo.jpg" alt="SPGadgets"></a>
+        </li>
+        <li>
+          <a href="gopro.html"><img src="gopro-logo.jpg" alt="GoPro"></a>
+        </li>
+        <li>
+          <a href="vive.html"><img src="vive-logo.jpg" alt="VIVE"></a>
+        </li>
+      </ul>
+    </section>
+    <section class="about">
+      <h2>О нас</h2>
+      <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+      <ul>
+        <li>Деловые Линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <a href="about_us.html" class="link">Подробнее о нас</a>
+    </section>
+    <section class="contacts">
+      <h2>Контакты</h2>
+      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+      <a href="map_popup.html"><img src="map.jpg" alt="Карта"></a>
+      <a href="write_us.html" class="link">Напишите нам</a>
+    </section>
   </main>
   <footer class="footer-main">
-
+    <div class="row">
+      <div class="footer-logo">
+        <a href="index.html"><img src="footer-logo.jpg" alt="Device"></a>
+      </div>
+      <nav class="nav-footer">
+        <ul class="nav-footer-user">
+          <li>
+            <a class="nav-footer-item" href="login.html">Войти</a>
+          </li>
+        </ul>
+        <ul class="nav-footer-goods">
+          <li>
+            <a class="nav-footer-item" href="compare.html">Сравнить</a>
+          </li>
+          <li>
+            <a class="nav-footer-item" href="cart.html">Корзина</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="row">
+      <div>г. Москва, ул. Строителей, 15</div>
+      <ul class="nav-footer-site">
+        <li>
+          <a href="delivery.html">Доставка</a>
+        </li>
+        <li>
+          <a href="garanty.html">Гарантия</a>
+        </li>
+        <li>
+          <a href="contacts.html">Контакты</a>
+        </li>
+      </ul>
+      <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+    </div>
+    <div class="row">
+      <ul class="socials">
+        <li>
+          <a href="facebook.html" class="social-item" title="facebook"></a>
+        </li>
+        <li>
+          <a href="instagram.html" class="social-item" title="instagram"></a>
+        </li>
+        <li>
+          <a href="twitter.html" class="social-item" title="twitter"></a>
+        </li>
+      </ul>
+      <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
+    </div>
   </footer>
   </body>
 </html>
