Добавлена базовая разметка в main для index.html

--- a/index.html
+++ b/index.html
@@ -266,16 +266,16 @@
     <div class="row">
       <ul class="socials">
         <li>
-          <a href="facebook.html" class="social-item" title="facebook"></a>
+          <a href="facebook.html" class="social-item" title="facebook">Facebook</a>
         </li>
         <li>
-          <a href="instagram.html" class="social-item" title="instagram"></a>
+          <a href="instagram.html" class="social-item" title="instagram">Instagram</a>
         </li>
         <li>
-          <a href="twitter.html" class="social-item" title="twitter"></a>
+          <a href="twitter.html" class="social-item" title="twitter">Twitter</a>
         </li>
       </ul>
-      <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
     </div>
   </footer>
   </body>
