Добавлена базовая разметка для catalog.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
         <li>
           <div class="advert">
             <h3 class="advert-header">Делай селфи, как Бен Стиллер!</h3>
+            <div class="advert-dash"></div>
+            <span>01</span>
             <img src="selfie-stick-8m.jpg" alt="Селфи палка 8 метров">
             <p class="short-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
             <a href="selfie-stick.html" class="link" >Подробнее</a>
@@ -109,6 +111,8 @@
         <li>
           <div class="advert visually-hidden">
             <h3 class="advert-header">Худеем правильно!</h3>
+            <div class="advert-dash"></div>
+            <span>02</span>
             <img src="fitness-bracelet.jpg" alt="Фитнес-браслет">
             <p class="short-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a href="fitness-bracelet.html" class="link">Подробнее</a>
@@ -123,6 +127,8 @@
         <li>
           <div class="advert visually-hidden">
             <h3 class="advert-header">Порхает как бабочка, жалит как пчела!</h3>
+            <div class="advert-dash"></div>
+            <span>03</span>
             <img src="selfie-stick-professional.jpg" alt="Квадрокоптер">
             <p class="short-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a href="selfie-stick.html" class="link">Подробнее</a>
@@ -264,6 +270,7 @@
       <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
     </div>
     <div class="row">
+      <div class="footer-dash"></div>
       <ul class="socials">
         <li>
           <a href="facebook.html" class="social-item" title="facebook">Facebook</a>
@@ -278,5 +285,15 @@
       <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
     </div>
   </footer>
+  <section class="modal modal-mail">
+    <h2 class="visually-hidden">Напишите нам</h2>
+    <!-- здесь будет форма -->
+    <span class="modal-close">x</span>
+  </section>
+  <section class="modal modal-map">
+    <h2 class="visually-hidden">Расположение на карте</h2>
+    <!-- здесь будет карта -->
+    <span class="modal-close">x</span>
+  </section>
   </body>
 </html>
