--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
@@ -13,63 +13,63 @@
       <input class="searchbox" title="search">
     </div>
     <nav class="nav-header">
-      <ul class="nav-header-user">
-        <li>
-          <a class="nav-header-item" href="login.html">Войти</a>
+      <ul class="nav-header-user-list">
+        <li class="nav-header-user-item">
+          <a href="login.html" class="nav-header-item">Войти</a>
         </li>
       </ul>
-      <ul class="nav-header-goods">
-        <li>
-          <a class="nav-header-item" href="compare.html">Сравнить</a>
+      <ul class="nav-header-goods-list">
+        <li class="nav-header-goods-list">
+          <a href="compare.html" class="nav-header-link">Сравнить</a>
         </li>
-        <li>
-          <a class="nav-header-item" href="cart.html">Корзина</a>
+        <li class="nav-header-goods-list">
+          <a href="cart.html" class="nav-header-link">Корзина</a>
         </li>
       </ul>
-      <ul class="nav-header-site">
-        <li>
+      <ul class="nav-header-site-list">
+        <li class="nav-header-site-item">
           <a href="catalogue.html">Каталог товаров</a>
           <ul class="nav-header-site-catalog">
             <li>
-              <ul class="nav-header-site-catalog-item">
-                <li>
-                  <a class="catalog-link" href="virtual_reality.html">Виртуальная реальность</a>
+              <ul class="nav-header-site-catalog-first-column-list">
+                <li class="nav-header-site-catalog-first-column-item">
+                  <a href="virtual_reality.html" class="catalog-link">Виртуальная реальность</a>
                 </li>
-                <li>
-                  <a class="catalog-link" href="selfie-monopodes.html">Моноподы для селфи</a>
+                <li class="nav-header-site-catalog-first-column-item">
+                  <a href="catalog.html" class="catalog-link">Моноподы для селфи</a>
                 </li>
-                <li>
-                  <a class="catalog-link" href="action-cameras.html">Экшн-камеры</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <ul class="nav-header-site-catalog-item">
-                <li>
-                  <a class="catalog-link" href="fitnes-bracelet.html">Фитнес-браслеты</a>
-                </li>
-                <li>
-                  <a class="catalog-link" href="smart-watch.html">Умные часы</a>
+                <li class="nav-header-site-catalog-first-column-item">
+                  <a href="action-cameras.html" class="catalog-link">Экшн-камеры</a>
                 </li>
               </ul>
             </li>
             <li>
-              <ul class="nav-header-site-catalog-item">
-                <li>
-                  <a class="catalog-link" href="quadrocopters.html">Квадрокоптеры</a>
+              <ul class="nav-header-site-catalog-second-column-list">
+                <li class="nav-header-site-catalog-second-column-item">
+                  <a href="fitnes-bracelet.html" class="catalog-link">Фитнес-браслеты</a>
+                </li>
+                <li class="nav-header-site-catalog-second-column-item">
+                  <a href="smart-watch.html" class="catalog-link">Умные часы</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <ul class="nav-header-site-catalog-third-column-list">
+                <li class="nav-header-site-catalog-third-column-item">
+                  <a href="quadrocopters.html" class="catalog-link">Квадрокоптеры</a>
                 </li>
               </ul>
             </li>
           </ul>
         </li>
-        <li>
-          <a href="delivery.html">Доставка</a>
+        <li class="nav-header-site-item">
+          <a href="delivery.html" class="nav-header-site-link">Доставка</a>
         </li>
-        <li>
-          <a href="garanty.html">Гарантия</a>
+        <li class="nav-header-site-item">
+          <a href="garanty.html" class="nav-header-site-link">Гарантия</a>
         </li>
-        <li>
-          <a href="contacts.html">Контакты</a>
+        <li class="nav-header-site-item">
+          <a href="contacts.html" class="nav-header-site-link">Контакты</a>
         </li>
       </ul>
     </nav>
@@ -79,15 +79,14 @@
     <section class="advert-box">
       <h2 class="visually-hidden">Рекламные слайдеры</h2>
       <ul class="radio-list">
-        <li><input  type="radio" title="advert-select" checked></li>
-        <li><input  type="radio" title="advert-select"></li>
-        <li><input  type="radio" title="advert-select"></li>
+        <li><input  type="radio" title="advert-select" class="radio-item" checked></li>
+        <li><input  type="radio" title="advert-select" class="radio-item"></li>
+        <li><input  type="radio" title="advert-select" class="radio-item"></li>
       </ul>
       <ul class="advert-list">
-        <li>
+        <li class="advert-item">
           <div class="advert">
             <h3 class="advert-header">Делай селфи, как Бен Стиллер!</h3>
-            <div class="advert-dash"></div>
             <span>01</span>
             <img src="selfie-stick-8m.jpg" alt="Селфи палка 8 метров">
             <p class="short-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -108,10 +107,9 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="advert-item">
           <div class="advert visually-hidden">
             <h3 class="advert-header">Худеем правильно!</h3>
-            <div class="advert-dash"></div>
             <span>02</span>
             <img src="fitness-bracelet.jpg" alt="Фитнес-браслет">
             <p class="short-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -124,10 +122,9 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="advert-item">
           <div class="advert visually-hidden">
             <h3 class="advert-header">Порхает как бабочка, жалит как пчела!</h3>
-            <div class="advert-dash"></div>
             <span>03</span>
             <img src="selfie-stick-professional.jpg" alt="Квадрокоптер">
             <p class="short-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
@@ -147,29 +144,29 @@
       </ul>
     </section>
     <section class="popular">
-      <h2 class="visually-hidden">Популярные товары</h2>
-      <nav class="nav-popular">
-        <ul>
-          <li>
-            <a href="virtual-reality.html">Виртуальная реальность</a>
+      <h2 class="visually-hidden">Ссылки на категории</h2>
+      <div class="nav-links">
+        <ul class="nav-links-list">
+          <li class="nav-links-item">
+            <a href="virtual-reality.html" class="nav-links-link">Виртуальная реальность</a>
           </li>
-          <li>
-            <a href="monopodes.html">Моноподы для селфи</a>
+          <li class="nav-links-item">
+            <a href="monopodes.html" class="nav-links-link">Моноподы для селфи</a>
           </li>
-          <li>
-            <a href="action-cameras.html">Экшн-камеры</a>
+          <li class="nav-links-item">
+            <a href="action-cameras.html" class="nav-links-link">Экшн-камеры</a>
           </li>
-          <li>
-            <a href="fitnes-tracker.html">Фитнес-браслеты</a>
+          <li class="nav-links-item">
+            <a href="fitnes-tracker.html" class="nav-links-link">Фитнес-браслеты</a>
           </li>
-          <li>
-            <a href="smart-watch.html">Умные часы</a>
+          <li class="nav-links-item">
+            <a href="smart-watch.html" class="nav-links-link">Умные часы</a>
           </li>
-          <li>
-            <a href="quadrocopters.html">Квадрокоптеры</a>
+          <li class="nav-links-item">
+            <a href="quadrocopters.html" class="nav-links-link">Квадрокоптеры</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </section>
     <section class="services">
       <h2 class="visually-hidden">Сервисы</h2>
@@ -185,33 +182,33 @@
         </li>
       </ul>
       <div class="nav-services-description">
-        <article>
+        <div>
           <h3 class="nav-services-header">Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-        </article>
-        <article class="visually-hidden">
+        </div>
+        <div class="visually-hidden">
           <h3 class="nav-services-header">Гарантия</h3>
           <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-        </article>
-        <article class="visually-hidden">
+        </div>
+        <div class="visually-hidden">
           <h3 class="nav-services-header">Кредит</h3>
           <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
-        </article>
+        </div>
       </div>
     </section>
-    <section class="logotypes">
-      <ul>
-        <li>
-          <a href="dgi.html"><img src="dgi-logo.jpg" alt="GDI"></a>
+    <section class="brands">
+      <ul class="brand-list">
+        <li class="brand-item">
+          <a href="dgi.html" class="brand-link"><img src="dgi-logo.jpg" alt="GDI"></a>
+        </li>
+        <li class="brand-item">
+          <a href="spgadgets.html" class="brand-link"><img src="spgadgets-logo.jpg" alt="SPGadgets"></a>
         </li>
         <li>
-          <a href="spgadgets.html"><img src="spgadgets-logo.jpg" alt="SPGadgets"></a>
+          <a href="gopro.html" class="brand-link"><img src="gopro-logo.jpg" alt="GoPro"></a>
         </li>
-        <li>
-          <a href="gopro.html"><img src="gopro-logo.jpg" alt="GoPro"></a>
-        </li>
-        <li>
-          <a href="vive.html"><img src="vive-logo.jpg" alt="VIVE"></a>
+        <li class="brand-item">
+          <a href="vive.html" class="brand-link"><img src="vive-logo.jpg" alt="VIVE"></a>
         </li>
       </ul>
     </section>
@@ -219,10 +216,10 @@
       <h2>О нас</h2>
       <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
       <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-      <ul>
-        <li>Деловые Линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
+      <ul class="transport-list">
+        <li class="transport-item">Деловые Линии</li>
+        <li class="transport-item">Автотрейдинг</li>
+        <li class="transport-item">ЖелДорЭкспедиция</li>
       </ul>
       <a href="about_us.html" class="link">Подробнее о нас</a>
     </section>
@@ -238,47 +235,46 @@
       <div class="footer-logo">
         <a href="index.html"><img src="footer-logo.jpg" alt="Device"></a>
       </div>
-      <nav class="nav-footer">
+      <div class="nav-footer">
         <ul class="nav-footer-user">
-          <li>
-            <a class="nav-footer-item" href="login.html">Войти</a>
+          <li class="nav-footer-item">
+            <a href="login.html" class="nav-footer-link">Войти</a>
           </li>
         </ul>
         <ul class="nav-footer-goods">
-          <li>
-            <a class="nav-footer-item" href="compare.html">Сравнить</a>
+          <li class="nav-footer-item">
+            <a href="compare.html" class="nav-footer-link">Сравнить</a>
           </li>
-          <li>
-            <a class="nav-footer-item" href="cart.html">Корзина</a>
+          <li class="nav-footer-item">
+            <a href="cart.html" class="nav-footer-link">Корзина</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </div>
     <div class="row">
-      <div>г. Москва, ул. Строителей, 15</div>
+      <p>г. Москва, ул. Строителей, 15</p>
       <ul class="nav-footer-site">
-        <li>
-          <a href="delivery.html">Доставка</a>
+        <li class="nav-footer-item">
+          <a href="delivery.html" class="nav-footer-link">Доставка</a>
         </li>
-        <li>
-          <a href="garanty.html">Гарантия</a>
+        <li class="nav-footer-item">
+          <a href="garanty.html" class="nav-footer-link">Гарантия</a>
         </li>
-        <li>
-          <a href="contacts.html">Контакты</a>
+        <li class="nav-footer-item">
+          <a href="contacts.html"  class="nav-footer-link">Контакты</a>
         </li>
       </ul>
       <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
     </div>
     <div class="row">
-      <div class="footer-dash"></div>
-      <ul class="socials">
-        <li>
+      <ul class="socials-list">
+        <li class="socials-item">
           <a href="facebook.html" class="social-item" title="facebook">Facebook</a>
         </li>
-        <li>
+        <li class="socials-item">
           <a href="instagram.html" class="social-item" title="instagram">Instagram</a>
         </li>
-        <li>
+        <li class="socials-item">
           <a href="twitter.html" class="social-item" title="twitter">Twitter</a>
         </li>
       </ul>
